<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="7dp"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="2dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="#C17ACC"
        >

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="22sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="23sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="220dp"
                android:textStyle="bold"
                android:textColor="#FFC107"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/png_nnn"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/outline_person_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"
                app:tint="#50C878" />

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naiemul_islam"
                android:textSize="20sp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:padding="3dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_email_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"
                app:tint="#50C878" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/naiemulislam_gmail_com"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:padding="3dp"
        />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/outline_chat_info_24"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"
                app:tint="#50C878" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abut"
            android:textSize="20sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            />

    </LinearLayout>


    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btnLogout"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/logout"
        app:icon="@drawable/baseline_logout_24"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:background="@color/white"
        />

</LinearLayout>